<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:isScrollContainer="true"
    android:overScrollMode="always"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="outsideInset"
    android:scrollbars="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView           
            android:id="@+id/textView2"
            android:text="" 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TextView>
        
		<TextView
		    android:id="@+id/textView1"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:layout_gravity="center"
		    android:text="@string/Welcome" >

</TextView>
                
		<TextView           
            android:id="@+id/textView4"
            android:text="" 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TextView>
	
		<TextView           
            android:id="@+id/textView5"
            android:text="" 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TextView>
		
  	    <Button
  	        android:id="@+id/StartRMS"
  	        android:layout_width="fill_parent"
  	        android:layout_height="wrap_content"
  	        android:text="@string/StartRMS" />
		
  	    <TextView           
            android:id="@+id/textView6"
            android:text="" 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TextView>
  	    
  	     <Button
  	        android:id="@+id/Settings"
  	        android:layout_width="fill_parent"
  	        android:layout_height="wrap_content"
  	        android:text="@string/Settings" />       
    </LinearLayout>

</ScrollView>